# nucleo-f103rb-rust-blank

./: Cargo.toml  Embed.toml  package-lock.json
.cargo/: config.toml
markdown/: adc-v1.md  exti.md  hd44780.md
src/: main.rs
src/applications/: mod.rs  pcf8574.rs
src/applications/peripherals/: gpio.rs  mod.rs  rcc.rs  usart.rs
src/applications/utils/: delay.rs
src/core_peripherals/: mod.rs  nvic  nvic.rs  scb.rs
src/peripherals/: adc.rs  afio.rs  exti.rs  flash.rs  gpio.rs  i2c.rs  mod.rs  nvic.rs  rcc.rs  stk.rs  tim.rs  tim_gp.rs  usart.rs
src/registers/peripherals/: flash.rs  gpio.rs  mod.rs  rcc.rs  usart.rs
src/utils/: delay.rs  mod.rs  utils.rs
